# cpp

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  TODO.md  augus.cpp  cmake_refer.md  main.cc  run.py  run.sh  test.lua
.github/workflows/: build.yml  cmake.yml  codeql-analysis.yml  pr.yml
3rd/: build.sh
DRAW/: CMakeLists.txt
Front-end/scrape/: README.md  scrape.html
cmake/: CMakeFunctions.cmake
doc/: CMakeListsGuide.md  OPGitRecord.md  UnitTest.md  awesomemd.md  mongoDB.md  rapidJson.md  sql.md  webRecord.md  计算机网络协议总结.md
doc/web_page/: cpp20.md
include/: augus.h  meow.h
include/augus/: augus.h  lib_func.hh
src/HELP_OTHERS/: CMakeLists.txt  main.cc  store_manage.hh
src/INTERVIEW/: CMakeLists.txt
src/TRAINING/: CMakeLists.txt  README.md  TODO.md  acmer_oi.hh  augus.cpp  augus_list.cc  augus_list.hh  augus_random.cpp  augus_random.h  augus_regex.cpp  augus_regex.h  auto-print.cpp  for_training.cc  for_training.hh  html.md  interview.cc  interview.hh  io.cc  io.hh  main.cc  math_method.cc  math_method.hh  poker.cc  poker.hh  practice.cpp  ptr.cc  ptr.hh  reading_record.cc  readingnotes.md  thread_practice.cc  thread_practice.hh  training.cc  training.hh  what.md
src/auguslibs/: CMakeLists.txt  augus_libs.cpp  augus_libs.h
src/auto/: daily.cpp
src/bad_fun/: CMakeLists.txt  README.md  case1.cpp  case2.cpp  case3.cpp
src/bit_dsa/: CMakeLists.txt  Fibonacci.cpp  Matrix.c  README.md  add_polyn.cpp  add_polyn.md  b_plus.c  bracket_matching.cpp  bracket_matching.txt  c_test.c  date_circle.cpp  date_circle.txt  hailstone.cpp  matrix.txt  storage_word.c  storage_word.cpp  storage_word.txt  water_wave.cpp  water_wave.txt
src/c/: 1.c  2.c  CMakeLists.txt  average.c  bjt2utc.c  collect_pennies.c  copy.c  count_number.c  count_odd_and_even.c  eigenvalue.c  f2c.c  fn.c  ft2m.c  gcd.c  guess_num.c  inverse.c  is_prime.c  len_word.c  log2x.c  polynomial_addition.c  read_int.c  saddle_point.c  search.c  sort.c  split_int.c  str.c  time_diff.c
src/caf/: CMakeLists.txt  dining_philosophers.cpp
src/dsa/: CMakeLists.txt  README.md  decrease_conquer.cpp  divide_conquer.cpp  dsa_test.cpp  linked_list.cpp  sort_alg.cpp
src/interview/: friend.cpp
src/leetcode/: 1.cpp  111.cpp  1114.cpp  121.cpp  13.cpp  149.cpp  164.cpp  168.cpp  169.cpp  171.cpp  172.cpp  1833.cpp  1846.cpp  1877.cpp  1893.cpp  191.cpp  2.cpp  20.cpp  2028.cpp  239.cpp  34.cpp  401.cpp  413.cpp  420.cpp  421.cpp  422.cpp  448.cpp  45.cpp  53.cpp  58.cpp  653.cpp  682.cpp  693.cpp  7.cpp  700.cpp  744.cpp  CMakeLists.txt  utils.h
src/linux/: CMakeLists.txt  README.md  select.c
src/linux/caf/: CMakeLists.txt  dancing_kirby.cpp
src/oatpp/: CMakeLists.txt  oatpp_handler.h  oatpp_hello.cpp
src/practice/: 1.cpp  2.cpp  3.cpp  CMakeLists.txt  README.md  attribute_parser.cpp  cin_cout.cpp  exception.cpp  filesystem.cpp  jpeg_compression.cpp  op_http.cpp  operator_overload.cpp  practice.cpp  ptr.cpp  ptr.hh  reverse.cpp  sizeof_val.cpp  test.cpp  test1.cpp  thread_practice.cpp  thread_practice.hh  virtual_function.cpp
src/primer/: CMakeLists.txt  base_type.cpp  primer_test.cpp  virtual_test.cpp
src/reference/: CMakeLists.txt  README.md  async.cpp  remove.cpp  rename.cpp
src/stl/: CMakeLists.txt  del_iterator.cpp
src/test/: CMakeLists.txt  test.cpp  test1.cpp  test3.cpp  tmp.cpp
src/training/: CMakeLists.txt  README.md  augus.cpp  interview.cpp  interview.hh  io.cpp  io.hh  main.cpp  poker.cpp  poker.hh  practice.cpp  ptr.cpp  ptr.hh  reading_record.cpp  reading_record.hh  thread_practice.cpp  thread_practice.hh  training.cpp  training.hh
src/uv/: CMakeLists.txt  uv_test.cpp
web_page/: BERT-Principles.md  README.md  TheIllustratedTransformer.md
